fixing header spacing

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -35,6 +35,7 @@ h1 {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   font-weight: bold;
+  min-width: 275px;
 }
 
 .user-links {
