--- a/src/Components/LoginForm/LoginForm.css
+++ b/src/Components/LoginForm/LoginForm.css
@@ -1,8 +1,7 @@
 .LoginPage {
   display: inline-block;
-  margin-top: 50px;
   max-width: 350px;
-  padding: 10px;
+  padding: 8px;
   background-color: #e6e6e6;
   color: black;
   border-radius: 10px;
@@ -28,9 +27,9 @@ h2 {
 
 .login-label {
   display: inline-block;
-  width: 100px;
+  width: 90px;
   text-align: right;
-  margin-right: 10px;
+  margin-right: 7px;
 }
 
 .login-submit {
