--- a/src/Routes/LandingPage.css
+++ b/src/Routes/LandingPage.css
@@ -1,11 +1,24 @@
-.landing-page {
+.landing-page-top {
   display: flex;
   flex-flow: row-reverse wrap;
   justify-content: space-between;
   align-items: flex-start;
-  max-width: 1200px;
   margin: auto;
-  padding: 20px 10px;
+
+}
+
+.landing-page {
+  max-width: 1100px;
+  margin: auto;
+  padding: 20px 15px;
+}
+
+.landing-header {
+  text-align: left;
+}
+
+.login-header {
+  text-align: center;
 }
 
 .login-toggle {
@@ -21,13 +34,19 @@
 .landing-page-info {
   display: inline-block;
   margin: auto;
-  padding: 10px;
+  padding: 10px 10px 10px 0px;
+  min-width: 450px;
+}
+
+.video-section {
+  max-width: 900px;
+  margin: auto;
 }
 
 .video-container {
   display: inline-block;
   position: relative;
-  margin: 10px auto;
+  margin: 15px auto;
   width: 100%;
   height: 0;
   padding-bottom: 51%;
@@ -41,13 +60,13 @@
   width: 100%;
 }
 
-@media screen and (min-width: 750px) {
-  .landing-page {
+@media screen and (min-width: 800px) {
+  .landing-page-top {
     flex-flow: row-reverse nowrap;
   }
 
   .LoginPage {
-    width: 300px;
+    width: 330px;
   }
 
 }
